@@ -1,154 +1,155 @@
-.\" Automatically generated by Pod::Man version 1.15
-.\" Tue Jun  4 16:47:01 2002
-.\"
-.\" Standard preamble:
-.\" ======================================================================
-.de Sh \" Subsection heading
-.br
-.if t .Sp
-.ne 5
-.PP
-\fB\\$1\fR
-.PP
-..
-.de Sp \" Vertical space (when we can't use .PP)
-.if t .sp .5v
-.if n .sp
-..
-.de Ip \" List item
-.br
-.ie \\n(.$>=3 .ne \\$3
-.el .ne 3
-.IP "\\$1" \\$2
-..
-.de Vb \" Begin verbatim text
-.ft CW
-.nf
-.ne \\$1
-..
-.de Ve \" End verbatim text
-.ft R
-
-.fi
-..
-.\" Set up some character translations and predefined strings.  \*(-- will
-.\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
-.\" double quote, and \*(R" will give a right double quote.  | will give a
-.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used
-.\" to do unbreakable dashes and therefore won't be available.  \*(C` and
-.\" \*(C' expand to `' in nroff, nothing in troff, for use with C<>
-.tr \(*W-|\(bv\*(Tr
-.ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
-.ie n \{\
-.    ds -- \(*W-
-.    ds PI pi
-.    if (\n(.H=4u)&(1m=24u) .ds -- \(*W\h'-12u'\(*W\h'-12u'-\" diablo 10 pitch
-.    if (\n(.H=4u)&(1m=20u) .ds -- \(*W\h'-12u'\(*W\h'-8u'-\"  diablo 12 pitch
-.    ds L" ""
-.    ds R" ""
-.    ds C` ""
-.    ds C' ""
-'br\}
-.el\{\
-.    ds -- \|\(em\|
-.    ds PI \(*p
-.    ds L" ``
-.    ds R" ''
-'br\}
-.\"
-.\" If the F register is turned on, we'll generate index entries on stderr
-.\" for titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and
-.\" index entries marked with X<> in POD.  Of course, you'll have to process
-.\" the output yourself in some meaningful fashion.
-.if \nF \{\
-.    de IX
-.    tm Index:\\$1\t\\n%\t"\\$2"
-..
-.    nr % 0
-.    rr F
-.\}
-.\"
-.\" For nroff, turn off justification.  Always turn off hyphenation; it
-.\" makes way too many mistakes in technical documents.
-.hy 0
-.if n .na
-.\"
-.\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
-.\" Fear.  Run.  Save yourself.  No user-serviceable parts.
-.bd B 3
-.    \" fudge factors for nroff and troff
-.if n \{\
-.    ds #H 0
-.    ds #V .8m
-.    ds #F .3m
-.    ds #[ \f1
-.    ds #] \fP
-.\}
-.if t \{\
-.    ds #H ((1u-(\\\\n(.fu%2u))*.13m)
-.    ds #V .6m
-.    ds #F 0
-.    ds #[ \&
-.    ds #] \&
-.\}
-.    \" simple accents for nroff and troff
-.if n \{\
-.    ds ' \&
-.    ds ` \&
-.    ds ^ \&
-.    ds , \&
-.    ds ~ ~
-.    ds /
-.\}
-.if t \{\
-.    ds ' \\k:\h'-(\\n(.wu*8/10-\*(#H)'\'\h"|\\n:u"
-.    ds ` \\k:\h'-(\\n(.wu*8/10-\*(#H)'\`\h'|\\n:u'
-.    ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'^\h'|\\n:u'
-.    ds , \\k:\h'-(\\n(.wu*8/10)',\h'|\\n:u'
-.    ds ~ \\k:\h'-(\\n(.wu-\*(#H-.1m)'~\h'|\\n:u'
-.    ds / \\k:\h'-(\\n(.wu*8/10-\*(#H)'\z\(sl\h'|\\n:u'
-.\}
-.    \" troff and (daisy-wheel) nroff accents
-.ds : \\k:\h'-(\\n(.wu*8/10-\*(#H+.1m+\*(#F)'\v'-\*(#V'\z.\h'.2m+\*(#F'.\h'|\\n:u'\v'\*(#V'
-.ds 8 \h'\*(#H'\(*b\h'-\*(#H'
-.ds o \\k:\h'-(\\n(.wu+\w'\(de'u-\*(#H)/2u'\v'-.3n'\*(#[\z\(de\v'.3n'\h'|\\n:u'\*(#]
-.ds d- \h'\*(#H'\(pd\h'-\w'~'u'\v'-.25m'\f2\(hy\fP\v'.25m'\h'-\*(#H'
-.ds D- D\\k:\h'-\w'D'u'\v'-.11m'\z\(hy\v'.11m'\h'|\\n:u'
-.ds th \*(#[\v'.3m'\s+1I\s-1\v'-.3m'\h'-(\w'I'u*2/3)'\s-1o\s+1\*(#]
-.ds Th \*(#[\s+2I\s-2\h'-\w'I'u*3/5'\v'-.3m'o\v'.3m'\*(#]
-.ds ae a\h'-(\w'a'u*4/10)'e
-.ds Ae A\h'-(\w'A'u*4/10)'E
-.    \" corrections for vroff
-.if v .ds ~ \\k:\h'-(\\n(.wu*9/10-\*(#H)'\s-2\u~\d\s+2\h'|\\n:u'
-.if v .ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'\v'-.4m'^\v'.4m'\h'|\\n:u'
-.    \" for low resolution devices (crt and lpr)
-.if \n(.H>23 .if \n(.V>19 \
-\{\
-.    ds : e
-.    ds 8 ss
-.    ds o a
-.    ds d- d\h'-1'\(ga
-.    ds D- D\h'-1'\(hy
-.    ds th \o'bp'
-.    ds Th \o'LP'
-.    ds ae ae
-.    ds Ae AE
-.\}
-.rm #[ #] #H #V #F C
-.\" ======================================================================
-.\"
-.IX Title "ESDSAMPLE 1"
-.TH ESDSAMPLE 1 "EsounD @VERSION@" "2002-06-04" "Enlightened Sound Daemon"
-.UC
+'\" te
+.TH ESDSAMPLE 1 "EsounD @VERSION@" "February 2006" "Enlightened Sound Daemon"
 .SH "NAME"
-esdsample \- The Enlightened Sound Daemon
+esdsample \- play a sample
+.SH "SYNOPSIS"
+.PP
+\fBesdsample\fR [-\fBs \fIhostname\fR:\fIport\fR\fR] [-\fBb\fR] [-\fBd\fR] [-\fBe\fR] [-\fBh\fR] [-\fBm\fR] [-\fBr \fIfreq\fR\fR] \fB\fIsamplename\fR\fR
 .SH "DESCRIPTION"
-.IX Header "DESCRIPTION"
-EsounD sampler
-.SH "USAGE"
-.IX Header "USAGE"
-esdsample [\f(CW\*(C`\-s\*(C'\fR server] [\f(CW\*(C`\-d\*(C'\fR [\f(CW\*(C`\-b\*(C'\fR] [\f(CW\*(C`\-m\*(C'\fR] [\f(CW\*(C`\-r\*(C'\fR freq]] < file
+.PP
+The \fBesdsample\fR utility plays a sample using the Enlighted
+Sound Daemon (\fBesd\fR)\&. 
+.SH "OPTIONS"
+.PP
+The following options are supported:
+.sp
+.ne 2
+.mk
+\fB-\fBs \fIhostname\fR:\fIport\fR\fR\fR
+.in +16n
+.rt
+Contact the \fBesd\fR server on \fIhostname\fR at \fIport\fR\&.
+.sp
+.sp 1
+.in -16n
+.sp
+.ne 2
+.mk
+\fB-\fBb\fR\fR
+.in +16n
+.rt
+Specify that
+the output should be in 8-bit format\&. By default, the output is in 16-bit
+format\&.
+.sp
+.sp 1
+.in -16n
+.sp
+.ne 2
+.mk
+\fB-\fBd\fR\fR
+.in +16n
+.rt
+Play the sample
+from file as raw data\&. The default behavior is to read the data from a sound
+file (\fB\&.wav\fR, \fB\&.au\fR, and so on)\&. If
+this option is chosen, \fB\fIsamplename \fR\fRis
+the name of a file\&.
+.sp
+.sp 1
+.in -16n
+.sp
+.ne 2
+.mk
+\fB-\fBe\fR\fR
+.in +16n
+.rt
+Play the sample
+from the \fBesd \fRcache\&. If this option is chosen, \fB\fIsamplename \fR\fR is the name of the sample in the cache\&.
+.sp
+.sp 1
+.in -16n
+.sp
+.ne 2
+.mk
+\fB-\fBh\fR\fR
+.in +16n
+.rt
+Display help
+text, and exit\&.
+.sp
+.sp 1
+.in -16n
+.sp
+.ne 2
+.mk
+\fB-\fBm\fR\fR
+.in +16n
+.rt
+Specify that
+the output should be in mono format\&. By default, the output is in stereo format\&.
+.sp
+.sp 1
+.in -16n
+.sp
+.ne 2
+.mk
+\fB-\fBr \fIfreq\fR\fR\fR
+.in +16n
+.rt
+Specify that the output rate should be set to \fIfreq\fR\&. By default, the output rate is set to 44\&.1 kHz\&.
+.sp
+.sp 1
+.in -16n
+.SH "OPERANDS"
+.PP
+The following operands are supported:
+.sp
+.ne 2
+.mk
+\fB\fB\fIsamplename\fR\fR\fR
+.in +16n
+.rt
+The name of the sample
+to be played\&.  If the -\fBe\fR option is used, \fB\fIsamplename \fR\fRis the \fBesd \fR cache
+name\&. Otherwise, \fB\fIsamplename \fR\fR
+is a filename\&.
+.sp
+.sp 1
+.in -16n
+.SH "EXAMPLES"
+.PP
+\fBExample 1: Playing a sample from a file \fR
+.PP
+.PP
+.nf
+example% \fBesdsample generic\&.wav\fR
+.fi
+.PP
+\fBExample 2: Playing a sample from the esd cache\fR
+.PP
+.PP
+.nf
+example% \fBesdsample -\fBe\fR esdctl:generic\&.wav\fR
+.fi
+(where \fBesdctl:generic\&.wav\fR is the
+cache name)
+.SH "EXIT STATUS"
+.PP
+The following exit values are returned:
+.sp
+.ne 2
+.mk
+\fB\fB0\fR\fR
+.in +9n
+.rt
+Application exited successfully
+.sp
+.sp 1
+.in -9n
+.sp
+.ne 2
+.mk
+\fB\fB>0\fR\fR
+.in +9n
+.rt
+Application
+exited with failure
+.sp
+.sp 1
+.in -9n
 .SH "SEE ALSO"
-.IX Header "SEE ALSO"
+.PP
 \&\fIesd\fR\|(1), \fIesdcat\fR\|(1), \fIesddsp\fR\|(1), \fIesdloop\fR\|(1), \fIesdplay\fR\|(1), 
 \&\fIesd-config\fR\|(1), \fIesdctl\fR\|(1), \fIesdfilt\fR\|(1), \fIesdmon\fR\|(1), \fIesdrec\fR\|(1)
+
